# continuity-bench

./: .gitignore  LICENSE  README.md  analyze_tail.py  audit_script.py  check_anthropic.py  extract.py  package-lock.json  quick_test.ps1  requirements.txt  run_eval.ps1  run_eval.sh  scratch_audit.py  scratch_pooled.py  scratch_results.py  scratch_sample.py  test.csv  walkthrough_phase_2_manual_edits.md
analysis/: __init__.py  breakdown.py  compute_metrics.py  confidence_intervals.py  gen_nb.py  results.ipynb
bench_logging/: __init__.py  baseline_log.jsonl  logger.py  treatment_log.jsonl
config/: experiment_manifest.json  providers.yaml
fault_injector/: __init__.py  generate_manifest.py  injector.py
harness/: __init__.py  judge.py  run_eval.py  runner.py
metriqual-landing/: index.html  script.js  styles.css
metriqual-proxy/: Cargo.toml
metriqual-proxy/src/: main.rs
metriqual-proxy/src/gateway/: router.rs
metriqual-proxy/src/metrics/: cost.rs
metriqual-proxy/src/middleware/: pii.rs
paper/: abstract.tex  appendix.tex  conclusion.tex  discussion.tex  evaluation_methodology.tex  introduction.tex  limitations.tex  main.tex  refs.bib  related_work.tex  results.tex  system_design.tex
results/: .gitignore  .gitkeep  breakdown.md  phase2_audit_output.txt  phase2_summary.md  raw_metrics.csv  raw_metrics_run_1.csv  raw_metrics_run_2.csv  raw_metrics_run_3.csv  raw_metrics_run_4.csv  raw_metrics_run_5.csv  retry_storm_finding.md  summary_metrics.json  summary_run_1.md  summary_run_2.md  summary_run_3.md  summary_run_4.md  summary_run_5.md
(+20 files in other folders)
