[package]
name = "metriqual-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
regex = "1.10.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
